--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@
     font-style: italic;
 }
 
+/* h3 {
+    display: inline-block;
+} */
+
 .NavLI {
     color: blue;
     text-decoration: underline;
@@ -10,4 +14,14 @@
 
 .NavLI:hover {
     cursor: pointer;
+}
+
+.ArtistLI {
+    /* font-weight: bold; */
+}
+
+.ArtistLI:hover {
+    cursor: pointer;
+    text-decoration: underline;
+    font-weight: bolder;
 }
